# Lut2Photo-Android

./: .gitignore  README.md  build_libgphoto2.sh  build_libgphoto2_arm64.sh  build_libgphoto2_armv7.sh  lut2photo_v0.8.py  settings.gradle.kts  水印设置参数详解.md  胶片颗粒参数详解.md  错误日志.txt
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/cn/alittlecookie/lut2photo/lut2photo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/luts/: Fuji-ASTIA.cube  Fuji-ClassicChrome.cube  Fuji-ProNegStd.cube  GR-BleachBypass_V4.cube  GR-Negative_V4.cube  GR-Positive_V4.cube  GR-RetroBlue_V4.cube  GR-一键森山大道_V4.cube  JC-Negative_V4.cube  JC-Positive_V4.cube  acros.cube  astia.cube  classicchrome.cube  classicnegative.cube  cyanorganic.cube  eterna.cube  eternableachbypass.cube  pronegstd.cube  provia.cube  reala.cube  srgbto709.cube  velvia.cube
app/src/main/assets/shaders/: lut_processor.spv
app/src/main/cpp/: CMakeLists.txt  gphoto2_jni.cpp  libgphoto2_wrapper.cpp  lut_image_processor.cpp  lut_image_processor.h
app/src/main/cpp/core/: image_processor.cpp  image_processor.h  lut_processor.cpp  lut_processor.h  streaming_processor.cpp  streaming_processor.h
app/src/main/cpp/include/: native_lut_processor.h
app/src/main/cpp/interfaces/: media_processor_interface.cpp  media_processor_interface.h
app/src/main/cpp/jni/: native_lut_processor.cpp  native_vulkan_processor.cpp
app/src/main/cpp/tests/: performance_test.cpp  performance_test.h  test_runner.cpp
app/src/main/cpp/utils/: bitmap_utils.cpp  bitmap_utils.h  exception_handler.cpp  exception_handler.h  memory_manager.cpp  memory_manager.h  memory_pool.cpp  memory_pool.h  simd_utils.cpp  simd_utils.h
app/src/main/cpp/vulkan/: vk_compute_pipeline.cpp  vk_compute_pipeline.h  vk_context.cpp  vk_context.h  vk_memory_pool.cpp  vk_memory_pool.h
app/src/main/cpp/vulkan/shaders/: README.md  compile_shaders.bat  compile_shaders.sh  lut_processor.comp  validate_shaders.bat
app/src/main/java/cn/alittlecookie/lut2photo/lut2photo/: BenchmarkActivity.kt  MainActivity.kt  MyApplication.kt
app/src/main/java/cn/alittlecookie/lut2photo/lut2photo/adapter/: CameraPhotoAdapter.kt  ImageAdapter.kt  LutAdapter.kt  ProcessingHistoryAdapter.kt
app/src/main/java/cn/alittlecookie/lut2photo/lut2photo/benchmark/: PerformanceBenchmark.kt
app/src/main/java/cn/alittlecookie/lut2photo/lut2photo/camera/: CameraFragment.kt  CameraService.kt  CameraTestActivity.kt  CameraViewModel.kt  GPhoto2CameraDevice.kt  ICameraDevice.kt  LibGPhoto2JNI.kt  TetheredShootingManager.kt  UsbCameraManager.kt  VideoEffectsManager.kt  VideoRenderer.kt  VideoStreamProcessor.kt  VideoSurfaceView.kt
app/src/main/java/cn/alittlecookie/lut2photo/lut2photo/core/: CpuLutProcessor.kt  EnhancedLutProcessor.kt  ErrorHandler.kt  FilmGrainProcessor.kt  GPhoto2Manager.kt  ILutProcessor.kt  LutCache.kt  LutProcessor.kt  MemoryManager.kt  NativeLutProcessor.kt  ProcessorSelectionStrategy.kt  ThreadManager.kt  ThumbnailCache.kt  WatermarkProcessor.kt
app/src/main/java/cn/alittlecookie/lut2photo/lut2photo/filetracker/: FileRecord.kt  FileTrackerConfig.kt  FileTrackerManager.kt  HotFileObserver.kt  OptimizedColdBootScanner.kt  PersistentStore.kt
app/src/main/java/cn/alittlecookie/lut2photo/utils/: RegionDecoderManager.kt
app/src/main/res/color/: slider_track_inactive.xml  toggle_button_background.xml  toggle_button_text.xml
app/src/main/res/drawable/: bottom_sheet_background.xml  bottomsheet_header_background.xml  hangout_video_24.xml  ic_arrow_back.xml  ic_camera.xml  ic_camera_24.xml  ic_check_circle_24.xml  ic_dashboard_black_24dp.xml  ic_delete_24.xml  ic_deselect_24.xml  ic_expand_less.xml  ic_expand_more.xml  ic_folder_24.xml  ic_history_24.xml  ic_home_black_24dp.xml  ic_image_placeholder.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_memory_24.xml  ic_menu_save.xml  ic_menu_upload.xml  ic_notifications.xml  ic_select_all_24.xml  ic_share_24.xml  landscape_button_background.xml  landscape_fab_background.xml  outline_add_photo_alternate_24.xml  outline_auto_stories_24.xml  outline_auto_stories_24_shifted.xml  outline_downloading_24.xml  outline_error_24.xml  outline_folder_24.xml  outline_format_align_center_24.xml  outline_format_align_left_24.xml  outline_format_align_right_24.xml  outline_grain_24.xml  outline_grain_24_shifted.xml  outline_image_24.xml  outline_ink_marker_24.xml  outline_ink_marker_24_shifted.xml  (+13 more)
app/src/main/res/drawable-anydpi/: ic_delete_24.xml  ic_folder_24.xml
app/src/main/res/layout/: activity_fullscreen_image.xml  activity_main.xml  bottomsheet_film_grain_settings.xml  bottomsheet_tethered_mode.xml  bottomsheet_watermark_settings.xml  card_image_preview.xml  component_image_preview_card.xml  component_watermark_preview.xml  dialog_watermark_settings.xml  fragment_camera.xml  fragment_dashboard.xml  fragment_home.xml  fragment_lut_manager.xml  fragment_notifications.xml  fragment_processing_history.xml  item_camera_photo.xml  item_image.xml  item_lut.xml  item_processing_record.xml
app/src/main/res/menu/: bottom_nav_menu.xml  dashboard_menu.xml  menu_help.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/raw/: fragment_shader.glsl  fragment_shader_simple.glsl  vertex_shader.glsl
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  strings_tethered.xml  styles.xml  styles_bottomsheet.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
app/src/main/rs/: lut_processor.rs
app/src/test/java/cn/alittlecookie/lut2photo/: LutConverterTest.kt
app/src/test/java/cn/alittlecookie/lut2photo/lut2photo/: ExampleUnitTest.kt  NativePerformanceTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/: libgphoto2_stub.cpp
libs/include/gphoto2/: gphoto2-port.h  gphoto2.h
(+52 files in other folders)
